tests/ui/consts/const-eval/const_fn_ptr_fail2.stderr
error[E0080]: calling non-const function `double`
  --> $DIR/const_fn_ptr_fail2.rs:16:18
   |
LL | const Y: usize = bar(X, 2); // FIXME: should fail to typeck someday
   |                  ^^^^^^^^^ evaluation of `Y` failed inside this call
   |
note: inside `bar`
  --> $DIR/const_fn_ptr_fail2.rs:9:5
   |
LL |     x(y)
   |     ^^^^ the failure occurred here

error[E0080]: calling non-const function `double`
  --> $DIR/const_fn_ptr_fail2.rs:19:18
   |
LL | const Z: usize = bar(double, 2); // FIXME: should fail to typeck someday
   |                  ^^^^^^^^^^^^^^ evaluation of `Z` failed inside this call
   |
note: inside `bar`
  --> $DIR/const_fn_ptr_fail2.rs:9:5
   |
LL |     x(y)
   |     ^^^^ the failure occurred here

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/const_fn_ptr_fail2.rs:9:5
   |
LL |     x(y)
   |     ^^^^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
